added login sysytem for adminstration, add progress bar, made some changes

--- a/angular.json
+++ b/angular.json
@@ -119,6 +119,10 @@
               "devServerTarget": "bicb-admin:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
