--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~9.1.1",
     "firebase": "^7.14.4",
     "moment": "^2.25.3",
+    "ng-circle-progress": "^1.5.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
